@@ -3503,3 +3503,41 @@ AT_CHECK([$COMPILE -DACTIVATE2 prog.cob], [0],
 ])
 
 AT_CLEANUP
+
+
+AT_SETUP([Nested ODO subscripts])
+AT_KEYWORDS([extensions runsubscripts subscripts])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01  n            PIC 9 VALUE 2.
+       01  m            PIC 9 VALUE 3.
+
+       01  a-table      VALUE "ABCDEFGHIJ".
+           03  rows     OCCURS 0 TO 2 TIMES
+                        DEPENDING ON n.
+                05  chars OCCURS 0 TO 5 TIMES
+                          DEPENDING ON m
+                          PIC X.
+
+       01  vals         PIC X(3).
+
+       PROCEDURE DIVISION.
+           MOVE chars (1, 2) TO vals (1:1)
+           MOVE chars (2, 1) TO vals (2:1)
+           MOVE chars (2, 3) TO vals (3:1)
+           IF  vals <> "BFH"
+               DISPLAY "Vals wrong: " vals
+               END-DISPLAY
+           END-IF
+           .
+])
+
+AT_CHECK([$COMPILE -fodoslide prog.cob], [0], [], [])
+AT_CHECK([./prog], [0])
+
+AT_CLEANUP
+
